removed warnings